plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.BUS'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot 기본 스타터
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// H2 Database (테스트용)
	runtimeOnly 'com.h2database:h2'

	// 테스트 관련 의존성
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// 롬복
	compileOnly 'org.projectlombok:lombok:1.18.28'
	annotationProcessor 'org.projectlombok:lombok:1.18.28'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

//	// **ByteBuddy (Mockito 및 Hibernate 호환성 문제 해결)**
//	testImplementation 'net.bytebuddy:byte-buddy:1.15.4'
//	testImplementation 'net.bytebuddy:byte-buddy-agent:1.15.4'
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs += "--add-opens=java.base/java.lang=ALL-UNNAMED"
	jvmArgs += "-Djdk.attach.allowAttachSelf=true"
}